# polymarket

./: .gitignore  CLAUDE.md  DESIGN.md  README.md  pyproject.toml  recommend.py
src/polymarket_cli/: main.py  models.py
src/polymarket_cli/api/: clob.py  gamma.py
src/polymarket_cli/commands/: dashboard.py  market.py  markets.py  search.py
src/polymarket_cli/display/: format.py  tables.py
