[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "polymarket-cli"
version = "0.1.0"
description = "Terminal CLI for Polymarket prediction markets"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "httpx>=0.27",
]

[project.scripts]
polymarket = "polymarket_cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/polymarket_cli"]

[tool.uv]
dev-dependencies = []
